--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: europe-west1-docker.pkg.dev/cbn-enaira-global-test-v1/demo/ks-guestbook-demo
+      - image: europe-west1-docker.pkg.dev/cbn-enaira-global-test-v1/demo/ks-guestbook-demo:0.2
         name: guestbook-ui
         ports:
         - containerPort: 80
